--- a/ClusterBuilder.vcxproj.filters
+++ b/ClusterBuilder.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Source\main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Source\HashTable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Cluster.h">
@@ -174,6 +177,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Source\HashTable.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Parallel.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\DisjointSet.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
