--- a/ClusterBuilder.vcxproj.filters
+++ b/ClusterBuilder.vcxproj.filters
@@ -24,6 +24,18 @@
     <ClCompile Include="Source\pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GraphPartitioner.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Adjacency.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\DisjointSet.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\HashTable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Cluster.h">
